--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Practice</title>
 </head>
 <body>
-    <h1>HELLO</h1>
+    <h1>NEW</h1>
     <h2>WORLD</h2>
 <script src="script.js"></script>
 </body>
